src/snapshots/rura__save_to_file_widget__tests__save_exists_cancel_overwrite.snap
---
source: src/save_to_file_widget.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                    ┌ Test ────────────────────────────────────────────────────┐                    "
"                    │┌────────────────────────────────────────────────────────┐│▓                   "
"                    ││test-exists.txt                                         ││▓                   "
"                    │└────────────────────────────────────────────────────────┘│▓                   "
"                    │                                   Enter Save | Esc Cancel│▓                   "
"                    └──────────────────────────────────────────────────────────┘▓                   "
"                     ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                   "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
