src/snapshots/rura__save_to_file_widget__tests__save_exists_show_overwrite_confirm.snap
---
source: src/save_to_file_widget.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                    ┌ Test ────────────────────────────────────────────────────┐                    "
"                    │┌────────────────────────────────────────────────────────┐│▓                   "
"                    ││test-exists.txt                                         ││▓                   "
"                    │└────────────────────────────────────────────────────────┘│▓                   "
"                    │File exists                                               │▓                   "
"                    │                                    Overwrite? [Y]es [N]o │▓                   "
"                    └──────────────────────────────────────────────────────────┘▓                   "
"                     ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                   "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
