src/snapshots/rura__save_to_file_widget__tests__save_success.snap
---
source: src/save_to_file_widget.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                    ┌ Test ────────────────────────────────────────────────────┐                    "
"                    │┌────────────────────────────────────────────────────────┐│▓                   "
"                    ││test.txt                                                ││▓                   "
"                    │└────────────────────────────────────────────────────────┘│▓                   "
"                    │                                   Enter Save | Esc Cancel│▓                   "
"                    └──────────────────────────────────────────────────────────┘▓                   "
"                     ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                   "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
